# AdvanceKeyLogger

./: .gitignore  ADVANCED_FEATURES_CHECKLIST.md  CODING_IMPROVEMENT_GUIDE.md  E2E_SERVER_GAPS.md  FLEET_GAPS.md  FUTURE_ROADMAP.md  FUTURE_ROADMAP_CHECKLIST.md  IDENTIFIED_ISSUES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  ISSUES_IDENTIFIED.md  OPERATIONS.md  PENDING_TASKS.md  README.md  README_FLEET.md  REMAINING_ISSUES_PLAN.md  REVIEW.md  TODO_REMAINING.md  agent_controller.py  createfile.py  credentials.example.json  credentials.json  issue.md  mailLogger.py  main.py  pyproject.toml  requirements.txt
.serena/: project.yml
biometrics/: __init__.py  analyzer.py  collector.py  matcher.py  models.py
c2/: __init__.py  dns_tunnel.py  domain_fronting.py  https_covert.py  protocol.py
capture/: __init__.py  adaptive_engine.py  audio_capture.py  base.py  clipboard_capture.py  keyboard_capture.py  macos_audio_backend.py  macos_clipboard_backend.py  macos_keyboard_backend.py  macos_mouse_backend.py  macos_screenshot_backend.py  macos_window_backend.py  mouse_capture.py  resource_manager.py  screenshot_capture.py  window_capture.py
config/: default_config.yaml  hot_switch.py  profile_manager.py  rules.yaml  server_config.example.yaml  settings.py
crypto/: __init__.py  envelope.py  key_store.py  keypair.py  protocol.py  signer.py
dashboard/: __init__.py  app.py  auth.py  run.py
docs/: architecture.md  build-obfuscation.md  c2-covert-channels.md  capture-plugins.md  credential-harvesting.md  dashboard.md  encryption.md  fleet-management.md  pipeline-middleware.md  rootkit.md  stealth.md  sync-engine.md  transport.md
engine/: __init__.py  actions.py  evaluator.py  event_bus.py  registry.py  rule_engine.py  rule_parser.py
fleet/: agent.py  auth.py  controller.py  run_agent.py
harvest/: __init__.py  browser_creds.py  browser_data.py  keys.py  scheduler.py
legacy/: README.md  createfile.py  mailLogger.py
pipeline/: __init__.py  base_middleware.py  context.py  core.py  registry.py
plugins/: __init__.py
profiler/: __init__.py  categorizer.py  models.py  scorer.py  tracker.py
recording/: __init__.py  session_recorder.py  session_store.py
rootkit/: __init__.py  ioctl_bridge.py  manager.py
server/: __init__.py  app.py  audit.py  auth.py  clients.py  config.example.yaml  data_bridge.py  keys.py  rate_limit.py  replay.py  run.py  storage.py
service/: __init__.py  linux_systemd.py  macos_launchd.py  manager.py  windows_service.py
stealth/: __init__.py  core.py  crash_guard.py  detection_awareness.py  env_sanitizer.py  etw_evasion.py  fs_cloak.py  image_scrubber.py  log_controller.py  memory_cloak.py  (+5 more)
(+109 files in other folders)
