[project]
name = "AdvanceKeyLogger"
version = "0.1.0"
description = "Educational input monitoring tool for learning OS APIs, networking, and software architecture"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
# Optional transports - install with: pip install .[transports]
transports = [
    "redis>=5.0.0",
    "websockets>=11.0",
]
# All optional dependencies
all = [
    "redis>=5.0.0",
    "websockets>=11.0",
]

[project.scripts]
advancekeylogger = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "UP",    # pyupgrade (modern Python syntax)
    "SIM",   # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
